# lz_logger

./: .gitignore  .metadata  BENCHMARK_COMPARISON.md  CHANGELOG.md  CODE_REVIEW_REPORT.md  DESIGN.md  FINAL_OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_REPORT.md  PERFORMANCE_TESTING.md  README.md  WORK_LOG_20251108.md  build_perf_test.sh  ffigen.yaml  main.txt  performance_comparison.md  performance_test  performance_test.c  pubspec.yaml  realistic_scenario_test.c  testOpt2.txt  test_encryption.sh  test_multithread_switch.c  verify_log_sequence.c
android/: build.gradle  proguard-rules.pro  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  lz_logger_jni.cpp
android/src/main/java/io/levili/lzlogger/: CryptoHelper.java  PerformanceTest.java
android/src/main/kotlin/com/example/lz_logger/: LzLogger.kt
android/src/main/kotlin/io/github/lzlogger/: LzLogger.kt
android/src/main/kotlin/io/levili/lzlogger/: LzLogger.kt
example/: FLUTTER_NATIVE_PERFORMANCE_REPORT.md  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/androidTest/java/io/levili/lzlogger_example/: LzLoggerPerformanceTest.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/lz_logger_example/: MainActivity.kt
example/ios/Runner/: AppDelegate.swift  Info.plist  PerformanceTestRunner.h  PerformanceTestRunner.m  Runner-Bridging-Header.h
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/ios/RunnerTests/: LzLoggerPerformanceTests.m  RunnerTests.swift
example/lib/: main.dart
ios/: lz_logger.podspec
ios/Classes/: LZLogger.h  LZLogger.m  LzLoggerPerformanceTest.h  lz_logger.c
lib/: lz_logger.dart  lz_logger_bindings_generated.dart
src/: CMakeLists.txt  lz_crypto.c  lz_crypto.h  lz_logger.c  lz_logger.h  lz_logger_android.c
tools/: README.md  decrypt.sh  decrypt_log.py  decrypt_log.rb
